app/assets/stylesheets/application.scss
@import "shared/variables";
@import 'bootstrap/scss/functions';
@import 'bootstrap/scss/mixins';
@import 'bootstrap/scss/variables';

@import 'libs/actiontext';
@import "components/splash";
@import "components/wraper";
//@import "components/keyboard";
@import "components/common";
@import "components/resources";
@import "shared/mushaf_page";
@import "shared/tajweed";
@import "shared/tajweed_color_new";
@import "shared/content";
@import "shared/diffy";
@import "components/pdf_preview";
@import "components/mutashabihat";
@import "components/tajweed_rules";
@import "components/transliteration";
@import "components/credit";
@import "components/faq";
@import "components/quiz";
@import "select2/dist/css/select2";
@import "libs/toastr";
@import "landing_page";
@import "components/tools_help";

html,
body {
  height: 100%;
}

.select2-container .select2-selection--single{
  height: 38px !important;
}
.select2-selection__rendered{
    line-height: 38px !important;
}
.select2-selection__clear, .select2-selection__arrow{
  height: 38px !important;
}

.select2-search__field:focus {
  outline: none !important;
}

.form-floating{
  .select2-container{
    padding: 17px 0 0 5px;
  }
  .select2-selection{
    border: none;
  }
}

